fix bug: gap exists between the header and subheader when resizing the window

--- a/src/Components/DataPoints/DataPoints.css
+++ b/src/Components/DataPoints/DataPoints.css
@@ -37,3 +37,6 @@
     border-radius: 5px;
 }
 
+.DataTableStyle .p-datatable-wrapper > .p-datatable-table > .p-datatable-thead {
+    height: 60px;
+}
